--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,11 @@ services:
       MYSQL_PASSWORD: my_password
     networks:
       - my_network
+    #Optional
+    #volumes:
+      #- ./mysql_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
 networks:
   my_network:
